animation for Portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,12 @@
             <ul class="projects-list list">
                 <li class="project-item">
                     <a class="project-link link" href="">
-                        <img class="portfolio-img" src="images/project-1.jpg" alt="Веб-сайт" width="370" height="294">
+                        <div class="project-thumb">
+                            <img class="portfolio-img" src="images/project-1.jpg" alt="Веб-сайт" width="370" height="294">
+                            <!-- <div class="thumb-block">
+                                <p class="thumb-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                            </div> -->
+                        </div>
                         <div class="project-discription">
                             <h3 class="project-title">Технокряк</h3>
                             <p class="product">Веб-сайт</p>
