coded animation Portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -44,9 +44,6 @@
                     <a class="project-link link" href="">
                         <div class="project-thumb">
                             <img class="portfolio-img" src="images/project-1.jpg" alt="Веб-сайт" width="370" height="294">
-                            <!-- <div class="thumb-block">
-                                <p class="thumb-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
-                            </div> -->
                         </div>
                         <div class="project-discription">
                             <h3 class="project-title">Технокряк</h3>
@@ -56,7 +53,9 @@
                 </li>
                 <li class="project-item">
                     <a class="project-link link" href="">
-                        <img class="portfolio-img" src="images/project-2.jpg" alt="Дизайн" width="370" height="294">
+                        <div class="project-thumb">
+                            <img class="portfolio-img" src="images/project-2.jpg" alt="Дизайн" width="370" height="294">
+                        </div>    
                         <div class="project-discription">
                             <h3 class="project-title">Постер New Orlean vs Golden Star</h3>
                             <p class="product">Дизайн</p>
@@ -65,7 +64,9 @@
                 </li>
                 <li class="project-item">
                     <a class="project-link link" href="">
-                        <img class="portfolio-img" src="images/project-3.jpg" alt="Додаток" width="370" height="294">
+                        <div class="project-thumb">
+                            <img class="portfolio-img" src="images/project-3.jpg" alt="Додаток" width="370" height="294">
+                        </div>    
                         <div class="project-discription">
                             <h3 class="project-title">Ресторан Seafood</h3>
                             <p class="product">Додаток</p>
@@ -74,7 +75,9 @@
                 </li>
                 <li class="project-item">
                     <a class="project-link link" href="">
-                        <img class="portfolio-img" src="images/project-4.jpg" alt="Маркетинг" width="370" height="294">
+                        <div class="project-thumb">
+                            <img class="portfolio-img" src="images/project-4.jpg" alt="Маркетинг" width="370" height="294">
+                        </div>    
                         <div class="project-discription">
                             <h3 class="project-title">Проєкт Prime</h3>
                             <p class="product">Маркетинг</p>
@@ -83,7 +86,9 @@
                 </li>
                 <li class="project-item">
                     <a class="project-link link" href="">
-                        <img class="portfolio-img" src="images/project-5.jpg" alt="Додаток" width="370" height="294">
+                        <div class="project-thumb">
+                            <img class="portfolio-img" src="images/project-5.jpg" alt="Додаток" width="370" height="294">
+                        </div>    
                         <div class="project-discription">
                             <h3 class="project-title">Проєкт Boxes</h3>
                             <p class="product">Додаток</p>
@@ -92,7 +97,9 @@
                 </li>
                 <li class="project-item">
                     <a class="project-link link" href="">
-                        <img class="portfolio-img" src="images/project-6.jpg" alt="Веб-сайт" width="370" height="294">
+                        <div class="project-thumb">
+                            <img class="portfolio-img" src="images/project-6.jpg" alt="Веб-сайт" width="370" height="294">
+                        </div>    
                         <div class="project-discription">
                             <h3 class="project-title">Inspiration has no Borders</h3>
                             <p class="product">Веб-сайт</p>
@@ -101,7 +108,9 @@
                 </li>
                 <li class="project-item">
                     <a class="project-link link" href="">
-                        <img class="portfolio-img" src="images/project-7.jpg" alt="Дизайн" width="370" height="294">
+                        <div class="project-thumb">
+                            <img class="portfolio-img" src="images/project-7.jpg" alt="Дизайн" width="370" height="294">
+                        </div>   
                         <div class="project-discription">
                             <h3 class="project-title">Видання Limited Edition</h3>
                             <p class="product">Дизайн</p>
@@ -110,7 +119,9 @@
                 </li>
                 <li class="project-item">
                     <a class="project-link link" href="">
-                        <img class="portfolio-img" src="images/project-8.jpg" alt="Маркетинг" width="370" height="294">
+                        <div class="project-thumb">
+                            <img class="portfolio-img" src="images/project-8.jpg" alt="Маркетинг" width="370" height="294">
+                        </div>    
                         <div class="project-discription">
                             <h3 class="project-title">Проєкт LAB</h3>
                             <p class="product">Маркетинг</p>
@@ -119,7 +130,9 @@
                 </li>
                 <li class="project-item">
                     <a class="project-link link" href="">
-                        <img class="portfolio-img" src="images/project-9.jpg" alt="Додаток" width="370" height="294">
+                        <div class="project-thumb">
+                            <img class="portfolio-img" src="images/project-9.jpg" alt="Додаток" width="370" height="294">
+                        </div>    
                         <div class="project-discription">
                             <h3 class="project-title">Growing Business</h3>
                             <p class="product">Додаток</p>
