--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <section class="hero">
             <div class="container">
             <h1 class="hero-title">ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
-            <button class="hero-btn" type="button">Замовити послугу</button>
+            <button class="hero-btn" type="button" data-modal-open>Замовити послугу</button>
             </div>
         </section>
 <!--Features-->
@@ -347,6 +347,16 @@
             </div>
         </div>
     </footer>
+    <div class="backdrop is-hidden">
+        <div class="modal" data-modal>
+            <p>Залиште свої дані, ми вам передзвонимо</p>
+            <button class="modal-close-btn" data-modal-close>
+                <svg width="18" height="18">
+                    <use href="./images/icons.svg#icon-close-black"></use>
+                </svg>
+            </button>
+        </div>
+    </div>
     <script src="./js/modal.js"></script>
 </body>
 </html
