add text block for Ourwork

--- a/index.html
+++ b/index.html
@@ -85,9 +85,18 @@
             <div class="container">
             <h2 class="ourwork-title">Чим ми займаємося</h2>
             <ul class="ourwork-list list">
-                <li class="ourwork-item"><img class="ourwork-img" src="./images/box-1.jpg" alt="розробка сайтів" width="370" height="294"></li>
-                <li class="ourwork-item"><img class="ourwork-img" src="./images/box-2.jpg" alt="розробка додатків" width="370" height="294"></li>
-                <li class="ourwork-item"><img class="ourwork-img" src="./images/box-3.jpg" alt="послуги дизайнера" width="370" height="294"></li>
+                <li class="ourwork-item">
+                    <img class="ourwork-img" src="./images/box-1.jpg" alt="розробка сайтів" width="370" height="294">
+                    <h3 class="ourwork-direct-title">Десктопні додатки</h3>
+                </li>
+                <li class="ourwork-item">
+                    <img class="ourwork-img" src="./images/box-2.jpg" alt="розробка додатків" width="370" height="294">
+                    <h3 class="ourwork-direct-title">Мобільні додатки</h3>
+                </li>
+                <li class="ourwork-item">
+                    <img class="ourwork-img" src="./images/box-3.jpg" alt="послуги дизайнера" width="370" height="294">
+                    <h3 class="ourwork-direct-title">Дизайнерські рішення</h3>
+                </li>
             </ul>
             </div>
         </section>
