--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
         <div class="modal" data-modal>
             <p>Залиште свої дані, ми вам передзвонимо</p>
             <button class="modal-close-btn" data-modal-close>
-                <svg width="18" height="18">
+                <svg class="icon-modal-close" width="18" height="18">
                     <use href="./images/icons.svg#icon-close-black"></use>
                 </svg>
             </button>
