--- a/index.html
+++ b/index.html
@@ -356,8 +356,8 @@
             </div>
         </div>
     </footer>
-    <div class="backdrop is-hidden">
-        <div class="modal" data-modal>
+    <div class="backdrop is-hidden" data-modal>
+        <div class="modal">
             <p>Залиште свої дані, ми вам передзвонимо</p>
             <button class="modal-close-btn" data-modal-close>
                 <svg class="icon-modal-close" width="18" height="18">
