--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
     </footer>
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
-            <p>Залиште свої дані, ми вам передзвонимо</p>
+            <p>Залиште свої дані, ми вам передзвонимо!</p>
             <button class="modal-close-btn" data-modal-close>
                 <svg class="icon-modal-close" width="18" height="18">
                     <use href="./images/icons.svg#icon-close-black"></use>
